Created openapi.yml and added plugin
- Created openapi.yml and added maven plugin