@@ -8,6 +8,8 @@ import com.lauro.correia.reactive.api.exception.user.UserNotFoundException;
 import com.lauro.correia.reactive.api.service.user.UserService;
 import com.lauro.correia.reactive.api.vo.UserInfoVO;
 import com.lauro.correia.reactive.api.vo.UserVO;
+import com.lauro.correia.reactive.model.UserDto;
+import com.lauro.correia.reactive.model.UserInfoDto;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -21,6 +23,7 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.reactive.server.WebTestClient;
 import org.springframework.util.ResourceUtils;
 import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 
 import java.io.File;
 import java.io.FileNotFoundException;
@@ -52,7 +55,8 @@ class UserInfoControllerTest {
     @DisplayName("Return Complete User Info for userId 7")
     void should_return_user_info_OK_for_id_7_test() throws IOException {
         //Given
-        final var userInfoVOJsonExpected = mapper.readValue(getJsonFile("response_get_user_info_id_7.json"), new TypeReference<UserInfoVO>() {
+        final var userInfoVOJsonExpected = mapper.readValue(getJsonFile("response_get_user_info_id_7.json"),
+                new TypeReference<UserInfoDto>() {
         });
 
         when(this.userService.getUserInfoComplete(anyString()))
@@ -74,9 +78,9 @@ class UserInfoControllerTest {
 
         final var userInfoVO = responseBody.stream().findFirst().get();
 
-        assertEquals(userInfoVOJsonExpected.userId(), userInfoVO.userId());
-        assertEquals(userInfoVOJsonExpected.album().size(), userInfoVO.album().size());
-        assertEquals(userInfoVOJsonExpected.post().size(), userInfoVO.post().size());
+        assertEquals(userInfoVOJsonExpected.getUserId(), userInfoVO.userId());
+        assertEquals(userInfoVOJsonExpected.getAlbums().size(), userInfoVO.album().size());
+        assertEquals(userInfoVOJsonExpected.getPosts().size(), userInfoVO.post().size());
     }
 
     @Test
@@ -86,7 +90,7 @@ class UserInfoControllerTest {
         when(this.userService.getUserInfoComplete(anyString()))
                 .thenReturn(Flux.error(new UserNotFoundException("User Not Found", CustomMessageApiError.builder()
                         .msg("User Not Found")
-                        .httpStatus(HttpStatus.NOT_FOUND)
+                        .httpStatus(HttpStatus.NOT_FOUND.value())
                         .build())));
 
         //When
@@ -97,7 +101,7 @@ class UserInfoControllerTest {
                 .expectStatus().isNotFound()
                 .expectBody(CustomMessageApiError.class)
                 .value(customApiError -> {
-                    assertEquals(HttpStatus.NOT_FOUND, customApiError.getHttpStatus());
+                    assertEquals(HttpStatus.NOT_FOUND.value(), customApiError.getHttpStatus());
                     assertEquals("User Not Found", customApiError.getMsg());
                 });
     }
@@ -109,7 +113,7 @@ class UserInfoControllerTest {
         when(this.userService.getUserInfoComplete(anyString()))
                 .thenReturn(Flux.error(new ServerErrorException("Internal Server Error", CustomMessageApiError.builder()
                         .msg("Internal Server Error")
-                        .httpStatus(HttpStatus.INTERNAL_SERVER_ERROR)
+                        .httpStatus(HttpStatus.INTERNAL_SERVER_ERROR.value())
                         .build())));
 
         //When
@@ -120,7 +124,7 @@ class UserInfoControllerTest {
                 .expectStatus().is5xxServerError()
                 .expectBody(CustomMessageApiError.class)
                 .value(customApiError -> {
-                    assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, customApiError.getHttpStatus());
+                    assertEquals(HttpStatus.INTERNAL_SERVER_ERROR.value(), customApiError.getHttpStatus());
                     assertEquals("Internal Server Error", customApiError.getMsg());
                 });
     }
@@ -129,7 +133,8 @@ class UserInfoControllerTest {
     @DisplayName("Return Complete User Info for userId 9")
     void should_return_user_info_OK_for_id_9_test() throws IOException {
         //Given
-        final var userInfoVOJsonExpected = mapper.readValue(getJsonFile("response_get_user_info_id_9.json"), new TypeReference<UserInfoVO>() {
+        final var userInfoVOJsonExpected = mapper.readValue(getJsonFile("response_get_user_info_id_9.json"),
+                new TypeReference<UserInfoDto>() {
         });
 
         when(this.userService.getUserInfoComplete(anyString()))
@@ -151,16 +156,17 @@ class UserInfoControllerTest {
 
         final var userInfoVO = responseBody.stream().findFirst().get();
 
-        assertEquals(userInfoVOJsonExpected.userId(), userInfoVO.userId());
-        assertEquals(userInfoVOJsonExpected.album().size(), userInfoVO.album().size());
-        assertEquals(userInfoVOJsonExpected.post().size(), userInfoVO.post().size());
+        assertEquals(userInfoVOJsonExpected.getUserId(), userInfoVO.userId());
+        assertEquals(userInfoVOJsonExpected.getAlbums().size(), userInfoVO.album().size());
+        assertEquals(userInfoVOJsonExpected.getPosts().size(), userInfoVO.post().size());
     }
 
     @Test
     @DisplayName("Return Complete User Info for userId 3")
     void should_return_user_info_OK_for_id_3_test() throws IOException {
         //Given
-        final var userInfoVOJsonExpected = mapper.readValue(getJsonFile("response_get_user_info_id_3.json"), new TypeReference<UserInfoVO>() {
+        final var userInfoVOJsonExpected = mapper.readValue(getJsonFile("response_get_user_info_id_3.json"),
+                new TypeReference<UserInfoDto>() {
         });
 
         when(this.userService.getUserInfoComplete(anyString()))
@@ -182,27 +188,27 @@ class UserInfoControllerTest {
 
         final var userInfoVO = responseBody.stream().findFirst().get();
 
-        assertEquals(userInfoVOJsonExpected.userId(), userInfoVO.userId());
-        assertEquals(userInfoVOJsonExpected.album().size(), userInfoVO.album().size());
-        assertEquals(userInfoVOJsonExpected.post().size(), userInfoVO.post().size());
+        assertEquals(userInfoVOJsonExpected.getUserId(), userInfoVO.userId());
+        assertEquals(userInfoVOJsonExpected.getAlbums().size(), userInfoVO.album().size());
+        assertEquals(userInfoVOJsonExpected.getPosts().size(), userInfoVO.post().size());
     }
 
     @Test
     @DisplayName("Return Complete User Info for userId 3")
     void should_return_user_test() throws IOException {
         //Given
-        final var usersVO = mapper.readValue(getJsonFile("response_get_all_users.json"), new TypeReference<List<UserVO>>() {
+        final var usersVO = mapper.readValue(getJsonFile("response_get_all_users.json"), new TypeReference<List<UserDto>>() {
         });
 
         when(this.userService.getUsers()).thenReturn(Flux.just(usersVO.get(0)));
 
         //When
-        List<UserVO> responseBody = this.webTestClient.get()
+        final var responseBody = this.webTestClient.get()
                 .uri("/user")
                 .accept(MediaType.APPLICATION_JSON)
                 .exchange()
                 .expectStatus().isOk()
-                .expectBodyList(UserVO.class)
+                .expectBodyList(UserDto.class)
                 .returnResult()
                 .getResponseBody();
 
@@ -212,7 +218,7 @@ class UserInfoControllerTest {
 
         org.assertj.core.api.Assertions.assertThat(responseBody.stream().findFirst().get())
                 .usingRecursiveComparison()
-                .isEqualTo(usersVO.get(0));
+                .isEqualTo(usersVO.getFirst());
     }
 
     private static File getJsonFile(String jsonName) {
